feat: regex impl

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,5 +3,5 @@ spring:
     name: run-length-encoding
 
 run-length-encoding:
-  implementation: SIMPLE
-  #implementation: REGEX
+  #implementation: SIMPLE
+  implementation: REGEX
